2007-07-23  Bastien Nocera  <hadess@hadess.net>

	* configure.in: generate the Makefiles for the new icons
	* src/ui.c: (on_conn_port_change), (populate_prefs), (apply_prefs):
	Kill the global conn_port variable
	* ui/icons/16x16/status/Makefile.am:
	* ui/icons/22x22/status/Makefile.am: update to distcheck the SVG files

2007-07-23  Andreas Nilsson  <nisses.mail@home.se>

	* ui/icons/24x24/status/phone-connecting:
	* ui/icons/24x24/status/phone-error:
	* ui/icons/24x24/status/phone-message: 24x24 canvas size added.

2007-07-23  Andreas Nilsson  <nisses.mail@home.se>

	* ui/icons/16x16/status/phone-connecting:
	* ui/icons/16x16/status/phone-error:
	* ui/icons/16x16/status/phone-message:
	* ui/icons/22x22/status/phone-connecting:
	* ui/icons/22x22/status/phone-error:
	* ui/icons/22x22/status/phone-message: Added sources for the status icons.

2007-07-20  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c: (phonemgr_listener_connect):
	* libgsm/phonemgr-utils.c: (get_rfcomm_channel),
	(find_dun_channel), (phonemgr_utils_get_channel),
	(phonemgr_utils_write_config), (phonemgr_utils_connect),
	(phonemgr_utils_tell_driver):
	* libgsm/phonemgr-utils.h: Look up for the DUN channel,
	rather than letting gnokii use the default channel (1),
	Fixes connecting to Sony Ericsson K800i phones (Closes: #356865)

2007-07-18  Bastien Nocera  <hadess@hadess.net>

	* src/gnome-phone-manager.desktop.in: Use the right
	icon in the desktop file as well

2007-07-18  Bastien Nocera  <hadess@hadess.net>

	* src/icon.c: (set_icon_state): Use the right icons
	* ui/Makefile.am: Don't forget to update the icon cache

2007-07-18  Bastien Nocera  <hadess@hadess.net>

	* ui/icons/16x16/status/Makefile.am:
	* ui/icons/22x22/status/Makefile.am: Rename some
	files to not conflict with other named icons in other
	directories.

2007-07-18  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/app.h:
	* src/icon.c: (set_icon_state), (tray_icon_init):
	* src/main.c: (main):