@@ -20,10 +20,17 @@ struct _PhonemgrObjectClass {
 
 struct _PhonemgrObject {
 	GObject parent;
+
+	guint percentage;
+	guint on_ac : 1;
+	/* We can only have one battery */
+	guint num_batteries : 1;
 };
 
 void phonemgr_object_emit_number_batteries_changed (PhonemgrObject *o, guint num_batteries);
 void phonemgr_object_emit_battery_state_changed (PhonemgrObject *o, guint index, guint percentage, gboolean on_ac);
+
+void phonemgr_object_coldplug (PhonemgrObject *o);
 
 G_END_DECLS
 
